--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           grid: "#bbb",
           inactive: "#ddd"
         },
-        title: "Go City Tech Radar — 2022.06",
+        title: "DRAFT: Go City Tech Radar — 2022.06",
         quadrants: [
           {name: "Languages and Frameworks"},
           {name: "Tools"},
@@ -118,7 +118,7 @@
         <h3>How do we maintain it?</h3>
 
         <p>
-          The Tech Radar is maintained by our <em>Principal Engineer</em> &mdash; who facilitates and drives the technology selection discussions at Go City across the Engineering Community. Assignment of technologies to rings is the outcome of Architecure Descision Records (ADRs), which are discussed with all engineers at Go City. The Tech Radar is open for contribution for all Engineering teams at Go City and depends on their active participation to share lessons learned, pitfalls, and contribute to good practices on using the technologies.<br/>
+          The Tech Radar is maintained by our Principal Engineer who facilitates and drives the technology selection discussions at Go City across the Engineering teams. Assignment of technologies to rings is the outcome of Architecure Descision Records (ADRs), which are discussed with all engineers at Go City. The Tech Radar is open for contribution for all Engineering teams at Go City and relies on their active participation to share lessons learned, pitfalls, and contribute to good practices on using the technologies.<br/>
         </p>
       </td>
     </tr>
