--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       });
       draw_radar(entries);
     });
-</script>
+  </script>
 
   <object data="img/logo.svg" width="300" height="200"> </object>
   <svg id="radar"></svg>
@@ -87,38 +87,35 @@
       <td>
         <h3>What is the Tech Radar?</h3>
         <p>
-          The Go City Tech Radar is a list of technologies, complemented by an assessment result, called <em>ring assignment</em>.
+          The Go City Tech Radar is a list of technologies, complemented by an assessment result, called ring assignment.
         </p>
-
         <p>
           We use the four quadrants:
         </p>
         <ul>
           <li><strong>Languages and Frameworks</strong> &mdash; Languages and frameworks that we use for writing code.</li>
-          <li><strong>Tools</strong> &mdash; These can be components, such as databases, software development tools, such as versions control systems; or more generic categories of tools, such as the notion of polyglot persistence.</li>
-          <li><strong>Platforms</strong> &mdash; What we build our software on top of.</li>
-          <li><strong>Techniques</strong> &mdash; Software engineering practices and processes</li>
+          <li><strong>Tools</strong> &mdash; Tools and components that we use to assist with engineering.</li>
+          <li><strong>Platforms</strong> &mdash; What we build our applications on top of.</li>
+          <li><strong>Techniques</strong> &mdash; Software engineering practices and processes that we follow.</li>
         </ul>
-
         <p>
           With the four rings:
         </p>
         <ul>
-          <li><strong style="color: #93c47d">ADOPT</strong> &mdash; Technologies we have high confidence in to serve our purpose, also in large scale. Technologies with a usage culture in our Go City production environment, low risk and recommended to be widely used.</li>
-          <li><strong style="color: #93d2c2">TRIAL</strong> &mdash; Technologies that we have seen work with success in project work to solve a real problem; first serious usage experience that confirm benefits and can uncover limitations. TRIAL technologies are slightly more risky; some engineers in our organization walked this path and will share knowledge and experiences.</li>
-          <li><strong style="color: #fbdb84">ASSESS</strong> &mdash; Technologies that are promising and have clear potential value-add for us; technologies worth to invest some research and prototyping efforts in to see if it has impact. ASSESS technologies have higher risks; they are often brand new and highly unproven in our organisation. You will find some engineers that have knowledge in the technology and promote it, you may even find teams that have started a prototyping effort.</li>
-          <li><strong style="color: #efafa9">DEPRECATE/HOLD</strong> &mdash; Technologies that are not recommended to be used for projects or that we are deprecating. DEPRECATED/HOLD technologies should be phased out of existing projects and not be used for new projects.</li>
+          <li><strong style="color: #93c47d">ADOPT</strong> &mdash; Technologies we have high confidence in to serve our purpose. Technologies that are used at Go City in our production environment and recommended to be widely used.</li>
+          <li><strong style="color: #93d2c2">TRIAL</strong> &mdash; Technologies that we have seen work with success to solve a real problem; first serious usage that confirms benefits and uncovers any limitations. TRIAL technologies are slightly more risky; some engineers at Go City have used these and will share knowledge and experiences.</li>
+          <li><strong style="color: #fbdb84">ASSESS</strong> &mdash; Technologies that are promising and have clear potential for us; technologies worth to invest some research and prototyping. ASSESS technologies have higher risks; they are often newer and unproven at Go City. You will find some engineers that have knowledge in these technologies and promote it, you may even find teams that have started a prototyping effort.</li>
+          <li><strong style="color: #efafa9">DEPRECATE/HOLD</strong> &mdash; Technologies that are not recommended to be used at Go City or that we are deprecating. DEPRECATED/HOLD technologies should be phased out of existing projects and not be used for new projects.</li>
         </ul>
       </td>
       <td>
         <h3>What is the purpose?</h3>
         <p>
-          The Tech Radar is a tool to inspire and support Engineering teams at Go City to pick the best technologies for new projects; it provides a platform to share knowledge and experience in technologies, to reflect on technology decisions and continuously evolve our technology landscape.
+          The Tech Radar is a tool to inspire and support engineering teams at Go City to pick the best technologies; it provides a platform to share knowledge and experience, to reflect on decisions and continuously evolve our landscape.
         </p>
         <h3>How do we maintain it?</h3>
-
         <p>
-          The Tech Radar is maintained by our Principal Engineer who facilitates and drives the technology selection discussions at Go City across the Engineering teams. Assignment of technologies to rings is the outcome of Architecure Descision Records (ADRs), which are discussed with all engineers at Go City. The Tech Radar is open for contribution for all Engineering teams at Go City and relies on their active participation to share lessons learned, pitfalls, and contribute to good practices on using the technologies.<br/>
+          The Tech Radar is maintained by our Principal Engineer who facilitates and drives the technology selection discussions at Go City across the engineering teams. Assignment of technologies to rings is the outcome of Architecure Descision Records (ADRs), which are discussed with all engineers at Go City. The Tech Radar is open for contribution for all engineering teams at Go City and relies on their active participation to share lessons learned and contribute to good practices on using the technologies.<br/>
         </p>
       </td>
     </tr>
@@ -128,12 +125,10 @@
     <p>
       Check out our <a href="https://medium.com/go-city">Engineering Blog</a> to find out more about how we work at Go City.
     </p>
-
     <p>
       <em style="font-size: 14px">* Thanks to Zalando for this template, if you would like to create your own Tech Radar they have <a href="https://github.com/zalando/tech-radar">open sourced the code</a>.</em>
     </p>
   </div>
-
 </body>
 
 </html>
